# tree-sitter-whatsapp

./: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package.json  pyproject.toml  runfile  setup.py  tree-sitter.json
bindings/c/: tree-sitter-whatsapp.pc.in
bindings/c/tree_sitter/: tree-sitter-whatsapp.h
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_whatsapp/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterWhatsappTests/: TreeSitterWhatsappTests.swift
src/: grammar.json  node-types.json  parser.c
test/: _chat.txt  chat.txt
