[package]
name = "tree-sitter-whatsapp"
description = "Grammar for WhatsApp conversation transcripts"
version = "0.1.0"
authors = ["Aaron Kriegman <aaronkplus2@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "whatsapp"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/akriegman/tree-sitter-whatsapp"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "/LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.10"
